attempt to prevent overflow horizontally

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   min-height: 100vh;
+  overflow-x: hidden
 }
 
 .header{
@@ -172,6 +173,7 @@ a{
   .inside-first-container{
     flex-direction: column;
     align-items: center;
+    padding: 24px 5%;
   }
 
   .header-image{
